--- a/4.html
+++ b/4.html
@@ -3,111 +3,211 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Napi Jelentés</title>
+<title>Napi Jelentés Pro</title>
 <style>
-body{font-family:'Segoe UI',sans-serif;background:#0f172a;color:white;margin:0;padding:10px;padding-bottom:100px;}
-.top-bar{background:#1e293b;padding:15px;border-radius:12px;margin-bottom:15px;display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #3b82f6;}
-.stat-box{text-align:center;}
-.stat-val{font-size:1.8rem;font-weight:bold;display:block;font-family:monospace;}
-.green{color:#10b981;} .red{color:#ef4444;}
-.input-row{display:grid;grid-template-columns:1fr 1fr 1fr 40px;gap:8px;margin-bottom:10px;background:#1e293b;padding:10px;border-radius:10px;}
-input{width:100%;padding:10px;background:#0f172a;border:1px solid #334155;color:white;border-radius:6px;text-align:center;box-sizing:border-box;font-size:1rem;}
-button.del{background:rgba(239,68,68,0.2);color:#ef4444;border:1px solid #ef4444;border-radius:6px;font-weight:bold;}
-button.add{width:100%;padding:15px;background:#3b82f6;color:white;border:none;border-radius:10px;font-size:1.1rem;font-weight:bold;margin-top:10px;}
-.eff-wrapper{display:flex;align-items:center;gap:5px;font-size:0.9rem;}
-#effInput{width:50px;padding:5px;border:none;border-bottom:2px solid #10b981;background:transparent;color:#10b981;font-weight:bold;}
+/* --- DESIGN --- */
+body { font-family: 'Segoe UI', sans-serif; background: #0f172a; color: white; margin: 0; padding: 15px; padding-bottom: 120px; }
+
+/* Felső Monitor */
+.monitor {
+background: #1e293b; border: 1px solid #334155; border-radius: 16px; padding: 15px;
+margin-bottom: 20px; box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+}
+
+/* Idő kijelzők */
+.time-row { display: flex; justify-content: space-between; margin-bottom: 20px; }
+.time-box { text-align: center; width: 48%; background: #0f172a; padding: 10px; border-radius: 12px; border: 1px solid #334155; }
+.time-val { font-family: 'Courier New', monospace; font-size: 1.8rem; font-weight: 900; display: block; }
+.label { font-size: 0.7rem; color: #94a3b8; text-transform: uppercase; letter-spacing: 1px; margin-top: 5px; display: block; }
+.green { color: #10b981; } .red { color: #ef4444; }
+
+/* Hatékonyság Vezérlő (NAGY GOMBOKKAL) */
+.eff-control { text-align: center; padding-top: 10px; border-top: 1px dashed #334155; }
+.eff-wrapper { display: flex; align-items: center; justify-content: center; gap: 20px; margin-top: 10px; }
+.eff-btn {
+width: 50px; height: 50px; border-radius: 12px; border: none;
+background: #334155; color: white; font-size: 24px; font-weight: bold;
+cursor: pointer; display: flex; align-items: center; justify-content: center;
+transition: 0.1s; box-shadow: 0 4px 0 #1e293b;
+}
+.eff-btn:active { transform: translateY(4px); box-shadow: none; }
+.eff-btn.minus { background: #ef4444; }
+.eff-btn.plus { background: #10b981; }
+
+.eff-display { font-size: 2.5rem; font-weight: 900; color: #10b981; min-width: 80px; text-align: center; }
+.eff-display span { font-size: 1rem; color: #94a3b8; font-weight: normal; }
+
+/* Táblázat */
+.table-header { display: grid; grid-template-columns: 1fr 1fr 1fr 40px; gap: 10px; margin-bottom: 10px; text-align: center; font-size: 0.7rem; color: #94a3b8; font-weight: bold; text-transform: uppercase; }
+.row { display: grid; grid-template-columns: 1fr 1fr 1fr 40px; gap: 10px; margin-bottom: 10px; background: #1e293b; padding: 10px; border-radius: 12px; align-items: center; animation: slideIn 0.3s ease; }
+@keyframes slideIn { from { opacity:0; transform:translateY(10px); } to { opacity:1; transform:translateY(0); } }
+
+input { width: 100%; padding: 12px 5px; background: #0f172a; border: 1px solid #334155; color: white; border-radius: 8px; text-align: center; font-size: 1.1rem; font-weight: bold; box-sizing: border-box; }
+input:focus { border-color: #3b82f6; outline: none; }
+input.downtime { color: #fbbf24; border-color: #451a03; }
+
+.btn-del { width: 40px; height: 40px; background: rgba(239,68,68,0.1); color: #ef4444; border: 1px solid #ef4444; border-radius: 8px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; }
+.btn-add { width: 100%; padding: 18px; background: #3b82f6; color: white; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: bold; cursor: pointer; margin-top: 15px; box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4); }
+.btn-add:active { transform: scale(0.98); }
+
+/* Mentés visszajelző */
+#saveStatus { position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); padding: 5px 15px; border-radius: 20px; font-size: 0.8rem; color: #10b981; opacity: 0; transition: opacity 0.5s; pointer-events: none; }
 </style>
 </head>
 <body>
 
-<div class="top-bar">
-<div class="stat-box">
-<span class="stat-val green" id="totalTime">00:00</span>
-<small style="color:#94a3b8">ÖSSZES</small>
+<div class="monitor">
+<div class="time-row">
+<div class="time-box">
+<span class="time-val green" id="totalTime">00:00</span>
+<span class="label">Ledolgozott</span>
 </div>
+<div class="time-box">
+<span class="time-val red" id="missingTime">12:00</span>
+<span class="label">Hiányzó</span>
+</div>
+</div>
+
+<div class="eff-control">
+<span class="label">HATÉKONYSÁG CÉL</span>
 <div class="eff-wrapper">
-Hatékonyság: <input type="number" id="effInput" value="87" oninput="reCalc()"> %
+<button class="eff-btn minus" onclick="changeEff(-1)">−</button>
+<div class="eff-display" id="effDisplay">87<span>%</span></div>
+<button class="eff-btn plus" onclick="changeEff(1)">+</button>
 </div>
-<div class="stat-box">
-<span class="stat-val red" id="missingTime">12:00</span>
-<small style="color:#94a3b8">HIÁNYZÓ</small>
 </div>
+</div>
+
+<div class="table-header">
+<div>Takt (mp)</div>
+<div>Darab</div>
+<div>Állás (p)</div>
+<div></div>
 </div>
 
 <div id="list"></div>
 
-<button class="add" onclick="addRow()">+ ÚJ SOR HOZZÁADÁSA</button>
+<button class="btn-add" onclick="addRow()">+ ÚJ SOR HOZZÁADÁSA</button>
+
+<div id="saveStatus">Mentve</div>
 
 <script>
-// Ez a függvény induláskor fut le
-window.onload = function() {
-// Megpróbáljuk betölteni a mentést, de ha nem megy, nem fagyunk le!
-try {
-const saved = localStorage.getItem('forvia_data');
-const eff = localStorage.getItem('forvia_eff');
-if(eff) document.getElementById('effInput').value = eff;
+// --- ADATKEZELÉS (EZ A LÉNYEG!) ---
 
-if(saved) {
-JSON.parse(saved).forEach(item => addRow(item));
-} else {
-addRow(); // Ha nincs mentés, egy üres sor
-}
-} catch(e) {
-console.log("Mentés nem elérhető (Offline mód) - Folytatás...");
-addRow();
-}
-reCalc();
-};
+let hatékonyság = 87; // Alapértelmezett
 
-function addRow(data = {t:'', q:'', d:''}) {
-const div = document.createElement('div');
-div.className = 'input-row';
-div.innerHTML = `
-<input type="number" class="t" placeholder="mp" value="${data.t}" oninput="reCalc()">
-<input type="number" class="q" placeholder="db" value="${data.q}" oninput="reCalc()">
-<input type="number" class="d" placeholder="Állás" value="${data.d}" oninput="reCalc()">
-<button class="del" onclick="this.parentElement.remove(); reCalc()">X</button>
-`;
-document.getElementById('list').appendChild(div);
-}
-
-function reCalc() {
-let totalSeconds = 0;
-const eff = (parseFloat(document.getElementById('effInput').value) || 1) / 100;
-
-const rows = document.querySelectorAll('.input-row');
-const dataToSave = [];
-
-rows.forEach(r => {
-const t = parseFloat(r.querySelector('.t').value) || 0;
-const q = parseFloat(r.querySelector('.q').value) || 0;
-const d = parseFloat(r.querySelector('.d').value) || 0;
-
-// Számítás: (Takt * Db) / Hatékonyság + Állásidő
-totalSeconds += ((t * q) / eff) + (d * 60);
-
-// Adatok gyűjtése mentéshez
-dataToSave.push({t: r.querySelector('.t').value, q: r.querySelector('.q').value, d: r.querySelector('.d').value});
+// Amikor elindul az oldal, betöltjük az adatokat
+document.addEventListener("DOMContentLoaded", () => {
+loadData();
 });
 
-// Eredmények kiírása
+function loadData() {
+// Megpróbáljuk betölteni a memóriából
+const mentettAdat = localStorage.getItem('forvia_hub_rows');
+const mentettEff = localStorage.getItem('forvia_hub_eff');
+
+if (mentettEff) {
+hatékonyság = parseInt(mentettEff);
+updateEffDisplay();
+}
+
+if (mentettAdat) {
+const sorok = JSON.parse(mentettAdat);
+if (sorok.length > 0) {
+sorok.forEach(adat => addRow(adat));
+} else {
+addRow(); // Ha üres a lista, adjunk egy üreset
+}
+} else {
+addRow(); // Első indításnál egy üres sor
+}
+calculate();
+}
+
+function saveData() {
+// Összeszedjük az adatokat
+const sorok = [];
+document.querySelectorAll('.row').forEach(div => {
+sorok.push({
+t: div.querySelector('.t').value,
+q: div.querySelector('.q').value,
+d: div.querySelector('.d').value
+});
+});
+
+// Elmentjük a telefon memóriájába
+localStorage.setItem('forvia_hub_rows', JSON.stringify(sorok));
+localStorage.setItem('forvia_hub_eff', hatékonyság);
+
+// Kis visszajelzés felvillantása
+const status = document.getElementById('saveStatus');
+status.style.opacity = '1';
+setTimeout(() => { status.style.opacity = '0'; }, 1000);
+}
+
+// --- GOMB FUNKCIÓK ---
+
+function changeEff(amount) {
+hatékonyság += amount;
+if (hatékonyság < 1) hatékonyság = 1;
+if (hatékonyság > 200) hatékonyság = 200;
+updateEffDisplay();
+calculate();
+saveData();
+}
+
+function updateEffDisplay() {
+document.getElementById('effDisplay').innerHTML = `${hatékonyság}<span>%</span>`;
+}
+
+function addRow(data = {t:'', q:'', d:''}) {
+const container = document.getElementById('list');
+const div = document.createElement('div');
+div.className = 'row';
+div.innerHTML = `
+<input type="number" class="t" placeholder="mp" value="${data.t}" oninput="calculate(); saveData()">
+<input type="number" class="q" placeholder="db" value="${data.q}" oninput="calculate(); saveData()">
+<input type="number" class="d downtime" placeholder="perc" value="${data.d}" oninput="calculate(); saveData()">
+<button class="btn-del" onclick="removeRow(this)">×</button>
+`;
+container.appendChild(div);
+// Ha új sort adunk hozzá, görgessen le
+if(!data.t) window.scrollTo(0, document.body.scrollHeight);
+}
+
+function removeRow(btn) {
+btn.closest('.row').remove();
+calculate();
+saveData();
+}
+
+function calculate() {
+let totalSeconds = 0;
+const effFactor = hatékonyság / 100;
+
+document.querySelectorAll('.row').forEach(div => {
+const t = parseFloat(div.querySelector('.t').value) || 0;
+const q = parseFloat(div.querySelector('.q').value) || 0;
+const d = parseFloat(div.querySelector('.d').value) || 0;
+
+// Képlet: (Takt * Darab) / Hatékonyság + (Állásidő * 60)
+const sorIdo = ((t * q) / effFactor) + (d * 60);
+totalSeconds += sorIdo;
+});
+
+// Kijelzés frissítése
 const h = Math.floor(totalSeconds / 3600);
 const m = Math.floor((totalSeconds % 3600) / 60);
-document.getElementById('totalTime').innerText = `${h}:${m.toString().padStart(2, '0')}`;
+document.getElementById('totalTime').innerText = `${h.toString().padStart(2,'0')}:${m.toString().padStart(2,'0')}`;
 
-const shiftSeconds = 12 * 3600;
-const missSeconds = Math.max(0, shiftSeconds - totalSeconds);
-const mh = Math.floor(missSeconds / 3600);
-const mm = Math.floor((missSeconds % 3600) / 60);
-document.getElementById('missingTime').innerText = `${mh}:${mm.toString().padStart(2, '0')}`;
+const shiftSeconds = 12 * 3600; // 12 órás műszak
+const missingSeconds = Math.max(0, shiftSeconds - totalSeconds);
+const mh = Math.floor(missingSeconds / 3600);
+const mm = Math.floor((missingSeconds % 3600) / 60);
+document.getElementById('missingTime').innerText = `${mh.toString().padStart(2,'0')}:${mm.toString().padStart(2,'0')}`;
 
-// Mentés megkísérlése (HIBA NÉLKÜL)
-try {
-localStorage.setItem('forvia_data', JSON.stringify(dataToSave));
-localStorage.setItem('forvia_eff', document.getElementById('effInput').value);
-} catch(e) {
-// Ha nem sikerül menteni, csendben maradunk, nem fagyasztjuk le a programot
-}
+// Színek
+document.getElementById('missingTime').className = missingSeconds > 0 ? "time-val red" : "time-val green";
 }
 </script>
 </body>
