--- a/index.html
+++ b/index.html
@@ -3,50 +3,92 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>FORVIA HUB - MASTER</title>
+<title>FORVIA HUB - PRO MASTER</title>
 <style>
 :root {
---bg: #0b1120; --card: #161e2e; --accent: #3b82f6;
---text: #f3f4f6; --text-dim: #94a3b8; --border: #1f2937;
+--bg: #0b1120; --card: #1e293b; --accent: #3b82f6;
+--text: #f3f4f6; --text-dim: #94a3b8; --border: #334155;
+--glass: rgba(30, 41, 59, 0.7);
 }
 
 * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
 
 body {
-font-family: 'Inter', system-ui, sans-serif;
-background: var(--bg); color: var(--text);
+font-family: 'Inter', system-ui, -apple-system, sans-serif;
+background: #0f172a; color: var(--text);
 margin: 0; height: 100dvh; overflow: hidden;
 display: flex; flex-direction: column;
 }
 
-/* --- ÜDVÖZLŐ KÉPERNYŐ --- */
+/* --- ÚJ PRO ÜDVÖZLŐ KÉPERNYŐ --- */
 .main-display {
 flex-grow: 1; display: flex; flex-direction: column;
 align-items: center; justify-content: center; text-align: center;
-background: radial-gradient(circle at center, #111827 0%, #0b1120 100%);
+/* Modern, színesebb háttér */
+background:
+radial-gradient(circle at top right, rgba(59, 130, 246, 0.15), transparent 40%),
+radial-gradient(circle at bottom left, rgba(16, 185, 129, 0.1), transparent 40%),
+#0b1120;
 padding: 20px;
+position: relative;
 }
-.welcome-box h1 { font-size: 2.2rem; margin: 0; color: white; font-weight: 800; }
-.welcome-box p { font-size: 1rem; color: var(--accent); margin-top: 10px; font-weight: 500; }
 
-/* --- SIDEBAR (Oldalsáv) --- */
+/* Üveghatású kártya */
+.glass-card {
+background: rgba(255, 255, 255, 0.03);
+backdrop-filter: blur(12px);
+-webkit-backdrop-filter: blur(12px);
+border: 1px solid rgba(255, 255, 255, 0.1);
+padding: 40px 30px;
+border-radius: 24px;
+box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+max-width: 400px;
+width: 100%;
+animation: fadeIn 0.8s ease-out;
+}
+
+.brand-title {
+font-size: 2.5rem; font-weight: 900; margin: 0;
+background: linear-gradient(135deg, #fff 0%, #94a3b8 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+letter-spacing: -1px;
+margin-bottom: 10px;
+}
+
+.brand-subtitle {
+font-size: 0.9rem; color: var(--accent);
+text-transform: uppercase; letter-spacing: 2px; font-weight: 700;
+margin-bottom: 25px; display: block;
+}
+
+.status-badge {
+display: inline-flex; align-items: center; gap: 8px;
+background: rgba(16, 185, 129, 0.1); color: #34d399;
+padding: 6px 12px; border-radius: 20px; font-size: 0.75rem; font-weight: 600;
+border: 1px solid rgba(16, 185, 129, 0.2);
+}
+
+.status-dot { width: 8px; height: 8px; background: #34d399; border-radius: 50%; box-shadow: 0 0 10px #34d399; }
+
+@keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
+/* --- SIDEBAR (Oldalsáv - Változatlan működés) --- */
 .sidebar {
 position: fixed; left: 0; top: 0;
-width: 280px; height: 100%; background: var(--card);
+width: 280px; height: 100%; background: #111827;
 border-right: 1px solid var(--border);
 display: flex; flex-direction: column;
 transform: translateX(-100%);
 transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 z-index: 2000;
 }
-.sidebar.open { transform: translateX(0); box-shadow: 20px 0 50px rgba(0,0,0,0.7); }
+.sidebar.open { transform: translateX(0); box-shadow: 20px 0 50px rgba(0,0,0,0.8); }
 
 header { padding: 30px 25px; border-bottom: 1px solid var(--border); }
 header h1 { font-size: 1.4rem; margin: 0; color: var(--accent); letter-spacing: 2px; }
 
 .nav-list { padding: 20px 15px; flex-grow: 1; overflow-y: auto; }
-
-/* A gombok kinézete */
 .nav-item {
 display: flex; align-items: center; padding: 14px 18px;
 margin-bottom: 8px; border-radius: 12px; text-decoration: none;
@@ -55,19 +97,22 @@ color: var(--text-dim); font-weight: 500; transition: 0.2s; cursor: pointer;
 .nav-item i { font-size: 1.2rem; margin-right: 15px; font-style: normal; text-align: center; width: 25px; }
 .nav-item:hover, .nav-item.active { background: var(--accent); color: white; }
 
-/* --- MENÜ GOMB (MINDIG LÁTHATÓ) --- */
+/* --- MENÜ GOMB (VISSZAÁLLÍTVA) --- */
 .menu-fab {
+display: flex; /* Biztosítja, hogy látható legyen */
 position: fixed; bottom: 35px; right: 30px;
 width: 65px; height: 65px; background: var(--accent);
-border-radius: 20px; display: flex; align-items: center; justify-content: center;
-box-shadow: 0 10px 25px rgba(59, 130, 246, 0.4); cursor: pointer; z-index: 3000;
-transition: 0.3s;
+border-radius: 20px; align-items: center; justify-content: center;
+box-shadow: 0 10px 30px rgba(59, 130, 246, 0.5); cursor: pointer;
+z-index: 9999; /* Legmagasabb prioritás */
+transition: transform 0.2s;
+border: 1px solid rgba(255,255,255,0.1);
 }
-.menu-fab:active { transform: scale(0.9); }
+.menu-fab:active { transform: scale(0.95); }
 
 .overlay {
 display: none; position: fixed; inset: 0;
-background: rgba(0,0,0,0.7); backdrop-filter: blur(4px); z-index: 1500;
+background: rgba(0,0,0,0.8); backdrop-filter: blur(4px); z-index: 1500;
 }
 .overlay.active { display: block; }
 
@@ -81,12 +126,21 @@ footer { padding: 20px; border-top: 1px solid var(--border); text-align: center;
 <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
 
 <main class="main-display">
-<div class="welcome-box">
-<h1>Üdv, Felhasználó!</h1>
-<p>FORVIA HUB OFFLINE SYSTEM</p>
-<div style="margin-top: 30px; color: #475569; font-size: 0.8rem;">
-A menü gombbal érheted el a modulokat.
+<div class="glass-card">
+<h1 class="brand-title">FORVIA HUB</h1>
+<span class="brand-subtitle">Industrial Management System</span>
+
+<div style="margin: 30px 0;">
+<div class="status-badge">
+<div class="status-dot"></div>
+SYSTEM ONLINE
 </div>
+</div>
+
+<p style="color: #94a3b8; font-size: 0.9rem; line-height: 1.5;">
+Üdvözöllek a rendszerben.<br>
+A modulok eléréséhez használd a <b style="color:white">Menü</b> gombot.
+</p>
 </div>
 </main>
 
@@ -104,6 +158,7 @@ A menü gombbal érheted el a modulokat.
 <a href="5.html" class="nav-item"><i>🎭</i> Maszk Finder</a>
 
 <div onclick="openSecureLink()" class="nav-item"><i>⚙️</i> Adatgeneráló</div>
+
 <a href="7.html" class="nav-item"><i>📈</i> Quality Analízis</a>
 </nav>
 
@@ -132,7 +187,6 @@ overlay.classList.toggle('active');
 icon.innerText = sidebar.classList.contains('open') ? '✕' : '☰';
 }
 
-// !!! EZ AZ ÚJ FUNKCIÓ A JELSZÓHOZ !!!
 function openSecureLink() {
 let pin = prompt("Kérem a biztonsági kódot:");
 if (pin === "123456") {
@@ -141,7 +195,6 @@ window.open("https://gergoroland33-sys.github.io/adatgeneralo/", "_blank");
 alert("Hibás kód! Hozzáférés megtagadva.");
 }
 }
-// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 // iPhone 12 iOS 18 fix
 document.addEventListener('gesturestart', function(e) { e.preventDefault(); });
