--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@ footer { padding: 20px; border-top: 1px solid var(--border); text-align: center;
 <nav class="nav-list">
 <div onclick="showHome()" class="nav-item active"><i>🏠</i> Kezdőlap</div>
 
-<div onclick="loadModule('1.html')" class="nav-item"><i>🔍</i> Cikkszám Kereső</div>
+<div onclick="loadModule('1.html')" class="nav-item"><i>🔍</i> Alkatrész Kereső</div>
 <div onclick="loadModule('2.html')" class="nav-item"><i>💰</i> Bérkalkulátor</div>
 <div onclick="loadModule('3.html')" class="nav-item"><i>📅</i> Műszaknaptár</div>
-<div onclick="loadModule('4.html')" class="nav-item"><i>📝</i> Napi Jelentés</div>
-<div onclick="loadModule('5.html')" class="nav-item"><i>🎭</i> Maszk Finder</div>
+<div onclick="loadModule('4.html')" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
+<div onclick="loadModule('5.html')" class="nav-item"><i>🎭</i> Maszk kereső</div>
 
 <div onclick="openSecureLink()" class="nav-item"><i>⚙️</i> Adatgeneráló</div>
 
-<div onclick="loadModule('7.html')" class="nav-item"><i>📈</i> Quality Analízis</div>
+<div onclick="loadModule('7.html')" class="nav-item"><i>📈</i> Hiba Analízis</div>
 </nav>
 
 <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
@@ -186,7 +186,7 @@ toggleMenu();
 // Jelszavas link
 function openSecureLink() {
 let pin = prompt("Kérem a biztonsági kódot:");
-if (pin === "123456") {
+if (pin === "smtforvia2026") {
 window.open("https://gergoroland33-sys.github.io/adatgeneralo/", "_blank");
 } else if (pin !== null) {
 alert("Hibás kód!");
