--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
 max-width: 500px; width: 100%; animation: fadeIn 0.8s ease-out;
 }
 
-/* Főcím stílusa */
+/* Főcím stílusa - Üdvözlet */
 .welcome-title {
 font-size: 2.2rem; font-weight: 800; margin: 0;
 color: white; letter-spacing: -1px; margin-bottom: 15px;
@@ -81,8 +81,18 @@ z-index: 2000;
 }
 .sidebar.open { transform: translateX(0); box-shadow: 20px 0 50px rgba(0,0,0,0.8); }
 
-.sidebar-header { padding: 25px 20px; border-bottom: 1px solid var(--border); }
-.sidebar-header h2 { font-size: 1.4rem; margin: 0; color: var(--accent); }
+/* Módosított Fejléc */
+.sidebar-header {
+padding: 25px 20px;
+border-bottom: 1px solid var(--border);
+background: rgba(255,255,255,0.02); /* Nagyon enyhe kiemelés */
+}
+.sidebar-header h2 {
+font-size: 1.3rem; /* Kicsit szolidabb méret */
+margin: 0;
+letter-spacing: 1px;
+font-weight: 700;
+}
 
 .nav-list { padding: 20px; flex-grow: 1; overflow-y: auto; }
 
@@ -140,7 +150,12 @@ Ez a verzió laptop és telefon kijelzőre lett optimalizálva.
 <iframe id="content-frame" name="appFrame"></iframe>
 
 <aside class="sidebar" id="sidebar">
-<div class="sidebar-header"><h2>FORVIA HUB</h2></div>
+<div class="sidebar-header">
+<h2>
+<span style="color: white;">FORVIA</span>
+<span style="color: var(--accent);">HUB</span>
+</h2>
+</div>
 
 <nav class="nav-list">
 <div onclick="showHome()" class="nav-item active"><i>🏠</i> Kezdőlap</div>
@@ -198,7 +213,7 @@ document.getElementById('content-frame').src = ""; // Kiürítjük
 toggleMenu();
 }
 
-// Jelszavas link
+// Jelszavas link (A megadott PIN kóddal)
 function openSecureLink() {
 let pin = prompt("Kérem a biztonsági kódot:");
 if (pin === "smtforvia2026") {
