--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@ transition: transform 0.2s;
 .menu-fab:active { transform: scale(0.9); }
 .menu-fab span { font-size: 28px; color: white; line-height: 1; }
 
-/* --- ÚJ FRISSÍTÉS GOMB (JOBB FELSŐ SAROK) --- */
+/* --- MÓDOSÍTOTT FRISSÍTÉS GOMB (A MENÜ FELETT) --- */
 .refresh-fab {
-position: fixed; top: 20px; right: 20px;
-width: 45px; height: 45px; /* Kicsit kisebb mint a menü */
-background: rgba(30, 41, 59, 0.8); /* Sötét, félig áttetsző */
+position: fixed; 
+bottom: 110px; /* Menü (30px) + MenüMagasság (60px) + Helyköz (20px) */
+right: 37px;   /* Középre igazítva a 60px-es menügombhoz (30px + 7.5px) */
+width: 45px; height: 45px;
+background: rgba(30, 41, 59, 0.8);
 backdrop-filter: blur(5px);
 border-radius: 50%; display: flex; align-items: center; justify-content: center;
 box-shadow: 0 5px 15px rgba(0,0,0,0.3);
