--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer { padding: 20px; border-top: 1px solid var(--border); text-align: center;
 
 <div id="home-screen">
 <div class="glass-card">
-<h1 class="welcome-title">Üdvözlet <span class="highlight-blue">Felhasználó</span></h1>
+<h1 class="welcome-title">Üdv <span class="highlight-blue">Felhasználó!</span></h1>
 
 <p class="instruction-text">
 Használd a jobb oldalon lévő <span class="instruction-highlight">menügombot</span><br>
