--- a/index.html
+++ b/index.html
@@ -211,12 +211,11 @@ function updateInfo() {
                     String(now.getDate()).padStart(2, '0') + ".";
     document.getElementById('display-date').innerText = dateStr;
 
-    // Napi kulcs generálása
     const dailyKey = "forvia_" + now.getFullYear() + (now.getMonth()+1) + now.getDate();
     const cacheBuster = Math.floor(Math.random() * 1000);
     
-    // Visitor Badge - Ez a szerver szinte 100% rendelkezésre állású
-    const hitUrl = `https://visitor-badge.laobi.icu/badge?page_id=gergoroland_hub_${dailyKey}&color=10b981&lcolor=1e293b&style=flat-square&t=${cacheBuster}`;
+    // Itt a módosított link a "Látogatók" felirattal
+    const hitUrl = `https://visitor-badge.laobi.icu/badge?page_id=gergoroland_hub_${dailyKey}&left_text=Látogatók&color=10b981&lcolor=1e293b&style=flat-square&t=${cacheBuster}`;
     
     document.getElementById('hit-img').src = hitUrl;
 }
