--- a/8.html
+++ b/8.html
@@ -30,11 +30,6 @@
         .shift-B.active { background-color: #10b981; border-color: #34d399; }
         .shift-C.active { background-color: #f59e0b; border-color: #fbbf24; }
         .shift-D.active { background-color: #8b5cf6; border-color: #a78bfa; }
-        
-        /* Lebegő frissítés gomb */
-        .refresh-fab { position: fixed; bottom: 20px; right: 20px; width: 45px; height: 45px; background: #3b82f6; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 18px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); cursor: pointer; z-index: 100; transition: all 0.3s ease; border: 2px solid rgba(255, 255, 255, 0.1); }
-        .refresh-fab:hover { background: #2563eb; transform: scale(1.1) rotate(180deg); }
-        .refresh-fab:active { transform: scale(0.9); }
 
         @media print {
             .no-print { display: none !important; }
@@ -48,10 +43,6 @@
 </head>
 <body class="pb-10">
     <div id="print-area" class="hidden"></div>
-    
-    <div class="refresh-fab no-print" onclick="window.location.reload()" title="Oldal újratöltése">
-        <i class="fas fa-sync-alt"></i>
-    </div>
 
     <header class="bg-[#111827] border-b border-slate-800 p-3 sticky top-0 z-50 no-print">
         <div class="max-w-full mx-auto flex flex-wrap justify-between items-center gap-3">
@@ -102,9 +93,9 @@
             <div class="mt-4 flex flex-wrap gap-3 p-3 bg-slate-900/50 rounded-xl border border-slate-800">
                 <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#059669] rounded"></div> SZABADSÁG (óra)</div>
                 <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#ea580c] rounded"></div> BETEGÁLLOMÁNY (BÁ)</div>
-                <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#7c3aed] rounded"></div> IGAZOLT (IG)</div>
-                <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#2563eb] rounded"></div> TANULMÁNYI (TU)</div>
-                <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#d97706] rounded"></div> KÉPZÉS (KÉ)</div>
+                <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#7c3aed] rounded"></div> IGAZOLATLAN (IG)</div>
+                <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#2563eb] rounded"></div> TÚLÓRA (TU)</div>
+                <div class="flex items-center gap-2 text-[10px] font-bold"><div class="w-3 h-3 bg-[#d97706] rounded"></div> KÉSÉS (KÉ)</div>
             </div>
         </div>
         <div id="view-stats" class="hidden grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 pt-4"></div>
