--- a/8.html
+++ b/8.html
@@ -197,15 +197,15 @@
             </div>
             <div class="flex flex-col items-center justify-center p-1 rounded bg-slate-800/50 border border-slate-700">
                 <div class="w-3 h-3 rounded-full cell-IG mb-1"></div>
-                <span class="text-[8px] font-bold text-slate-400">IGAZOLT</span>
+                <span class="text-[8px] font-bold text-slate-400">IGAZOLATLAN</span>
             </div>
             <div class="flex flex-col items-center justify-center p-1 rounded bg-slate-800/50 border border-slate-700">
                 <div class="w-3 h-3 rounded-full cell-TU mb-1"></div>
-                <span class="text-[8px] font-bold text-slate-400">SULI</span>
+                <span class="text-[8px] font-bold text-slate-400">TÚLÓRA</span>
             </div>
             <div class="flex flex-col items-center justify-center p-1 rounded bg-slate-800/50 border border-slate-700">
                 <div class="w-3 h-3 rounded-full cell-KE mb-1"></div>
-                <span class="text-[8px] font-bold text-slate-400">KÉPZÉS</span>
+                <span class="text-[8px] font-bold text-slate-400">KÉSÉS</span>
             </div>
         </div>
     </footer>
